--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -377,4 +377,21 @@
   font-size: 1.2em;
   font-weight: bold;
   color: #212529;
+}
+
+.links {
+  margin: 2rem 0;
+  text-align: center;
+}
+
+.link {
+  color: #0070f3;
+  text-decoration: none;
+  font-size: 1.1rem;
+  transition: color 0.2s;
+}
+
+.link:hover {
+  color: #0051a8;
+  text-decoration: underline;
 } 
